test: Integration tests for Mentee and MenteeApplication repositories
- Introduced comprehensive integration tests for `PostgresMenteeApplicationRepository` and `PostgresMenteeRepository`.
- Validated create, update, find, and count methods for mentee and application entities.
- Ensured proper cleanup and data isolation with setup/teardown logic for tests.
- Added validation test cases for invalid mentee and application scenarios.